--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script defer src="script/script.js"></script>
+  <script defer src="script/script-v2.js"></script>
 </head>
 <body>
   
