Edit index.html and add styles.css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <script defer src="script/script-v2.js"></script>
+  <!-- <script defer src="script/script-v2.js"></script> -->
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+
+  <h1>Rock, Paper, Scissors</h1>
+  <button>Rock</button>
+  <button>Paper</button>
+  <button>Scissors</button>
+  <p>Your choice: </p>
+  <p>Computer's choice: </p>
+  <p>Score</p>
+  <p>You: vs Computer:</p>
   
 </body>
 </html>
