--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 <body>
 
-  <h1>Rock, Paper, Scissors</h1>
-  <button>Rock</button>
-  <button>Paper</button>
-  <button>Scissors</button>
-  <p>Your choice: </p>
-  <p>Computer's choice: </p>
-  <p>Score</p>
-  <p>You: vs Computer:</p>
+  <div class="play-area">
+    <h1>Rock, Paper, Scissors</h1>
+    <button class="rock">
+      <img src="images/rock.jpg" alt="">
+    </button>
+    <button class="paper">
+      <img src="images/paper.jpg" alt="">
+    </button>
+    <button class="scissors">
+      <img src="images/scissors.jpg" alt="">
+    </button>
+    <p>Your choice: </p>
+    <p>Computer's choice: </p>
+    <p>Score</p>
+    <p>You: vs Computer:</p>
+  </div>
+
   
 </body>
 </html>
