Edit index.html and add button animations

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
 
   <div class="play-area">
-    <h1>Rock, Paper, Scissors</h1>
-    <button class="rock">
-      <img src="images/rock.jpg" alt="">
+    <h1>Rock Paper Scissors</h1>
+    <button class="option rock">
+      <img src="images/rock.jpg" alt="rock">
     </button>
-    <button class="paper">
-      <img src="images/paper.jpg" alt="">
+    <button class="option paper">
+      <img src="images/paper.jpg" alt="paper">
     </button>
-    <button class="scissors">
-      <img src="images/scissors.jpg" alt="">
+    <button class="option scissors">
+      <img src="images/scissors.jpg" alt="scissors">
     </button>
     <p>Your choice: </p>
     <p>Computer's choice: </p>
