--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <p class="ties">Tie: <span></span></p>
   </div>
   <div class="result"></div>
+  <div class="play-again"></div>
 
 </body>
 </html>
